[package]
name = "project_1_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
# avian2d = "0.1.2"
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.28.0"
bevy_asset_loader = "0.22.0"
bevy_ecs_tilemap = "0.15.0"
bevy_hanabi = { version = "0.14.0", default-features = false, features = ["2d", "serde"] }
leafwing-input-manager = "0.16.0"
# bevy_rapier2d = { version = "0.27.0", features = ["debug-render-2d"] } # "parallel", 
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"


# no idea if this works, just assuming
# [target.x86_64-pc-windows-msvc]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
